@@ -245,9 +245,9 @@ name|Exception
 block|{
 name|initCore
 argument_list|(
-literal|"solrconfig.xml"
+literal|"solrconfig-minimal.xml"
 argument_list|,
-literal|"schema.xml"
+literal|"schema-preanalyzed.xml"
 argument_list|)
 expr_stmt|;
 block|}
@@ -435,6 +435,29 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testValidSimple2
+specifier|public
+name|void
+name|testValidSimple2
+parameter_list|()
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"pre"
+argument_list|,
+literal|"{\"v\":\"1\",\"str\":\"document one\",\"tokens\":[{\"t\":\"one\"},{\"t\":\"two\"},{\"t\":\"three\",\"i\":100}]}"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
